syntax = "proto3";
option java_package = "services.smartAccess";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";

package services.smartAccess;

// Service methods
service SmartAccessControl {
  rpc UnlockDoor (UnlockDoorRequest) returns (ActionResponse) {}
  rpc RaiseAlarm (RaiseAlarmRequest) returns (ActionResponse) {}
  rpc GetAccessLogs (GetAccessLogsRequest) returns (AccessLogsResponse) {}
}

// Utility Types
enum DoorStatus {
  UNKNOWN = 0;
  LOCKED = 1;
  UNLOCKED = 2;
}

enum AccessLevel {
  UNKNOWN_LEVEL = 0;
  GENERAL = 1;
  STAFF = 2;
  ADMIN = 3;
}

message AccessCredentials {
  string badgeId = 1;
  string pin = 2;
  AccessLevel level = 3;
}

message LogEntry {
  string userId = 1;
  Timestamp accessTime = 2;
  DoorStatus status = 3;
}

message ActionResponse {
  bool success = 1;
  ErrorCode error_code = 2;
}

enum ErrorCode {
  NONE = 0;
  ACCESS_DENIED = 1;
  DOOR_NOT_FOUND = 2;
  SYSTEM_ERROR = 3;
}

message Timestamp {
    google.protobuf.Timestamp value = 1;
}

// Request/Response Types
message UnlockDoorRequest {
  string doorId = 1;
  string userId = 2;
  AccessCredentials credentials = 3;
}

message GetAccessLogsRequest {
  string doorId = 1;
  Timestamp startTime = 2;
  Timestamp endTime = 3;
}

message RaiseAlarmRequest {
  string doorId = 1;
  AccessCredentials credentials = 3;
}

message AccessLogsResponse {
  repeated LogEntry logs = 1;
  ErrorCode error_code = 2;
}
